# django-signposting

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: hermes_github.yml  python-package.yml
.hermes/curate/: hermes.json
django_signposting/: middleware.py  sparql.py
example/: requirements.txt
example/example/: urls.py  views.py
example/simple/simple/: asgi.py  settings.py  wsgi.py
tests/: test_html_signposting_middleware.py  test_jsonld_signposting_middleware.py  test_middleware.py  test_utils.py
