[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django_signposting"
authors = [
    {name = "Daniel Bauer", email = "github@dbauer.me"}
]
description = "Add FAIR signpostings to response headers"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=3.0"
]
